package com.lldprep.systems.parkinglot.model;

public enum SpotStatus {
    AVAILABLE, OCCUPIED, OUT_OF_SERVICE
}
