package com.lldprep.systems.parkinglot.model;

public enum VehicleType {
    BIKE, CAR, TRUCK
}
